Getting icon to display

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <div class="dailyWeatherHeader">
         <h1 class="cityName"></h1>
         <h1 class="dayOfWeek"></h1>
-        <img src="" alt="weatherPic">
+        <div class="weatherIcon">
+        <img id="icon" alt="hello">
+        </div>
         </div>
         <div class="dailyDisplay"></div>
     </div>
