working on daily weather header

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <div class="dailyWeatherHeader">
         <h1 class="cityName"></h1>
         <h1 class="dayOfWeek"></h1>
-        <div class="weatherIcon">
         <img id="icon" alt="hello">
-        </div>
+        
         </div>
         <div class="dailyDisplay"></div>
     </div>
@@ -33,6 +32,7 @@
         <div class="block5"></div>
     </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
