convert kelvin to fahrenheit

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
         <div class="dailyWeatherHeader">
         <h1 class="cityName"></h1>
         <h1 class="dayOfWeek"></h1>
-        <img id="icon" alt="hello">
-        
+        <img id="icon" alt="hello"> 
         </div>
-        <div class="dailyDisplay"></div>
+        <div class="dailyDisplay">
+            <p class="temp">Temp:</p>
+            <p class="wind">Wind:</p>
+            <p class="humid">Humidity:</p>
+            <p class="uv">UV Index:</p>
+        </div>
     </div>
     <div class="fiveDayForecast">
         <div class="block1"></div>
