working on creating five day forecast ui

--- a/index.html
+++ b/index.html
@@ -29,11 +29,21 @@
         </div>
     </div>
     <div class="fiveDayForecast">
-        <div class="block1"></div>
-        <div class="block2"></div>
-        <div class="block3"></div>
-        <div class="block4"></div>
-        <div class="block5"></div>
+        <div class="block">
+            <p class="temp">Temp:25</p>
+            <p class="wind">Wind:</p>
+            <p class="humid">Humidity:</p>
+        </div>
+        <div class="block">
+            <li>
+            <p class="temp">Temp:25</p>
+            <p class="wind">Wind:25</p>
+            <p class="humid">Humidity:25</p>
+            </li>
+        </div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
     </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
