testing and figuring out 5 day forecast

--- a/index.html
+++ b/index.html
@@ -30,20 +30,50 @@
     </div>
     <div class="fiveDayForecast">
         <div class="block">
-            <p class="temp">Temp:25</p>
-            <p class="wind">Wind:</p>
-            <p class="humid">Humidity:</p>
+            <ul>
+                <li></li>
+                <li></li>
+                <p class="temp">Temp:25</p>
+                <p class="wind">Wind:25</p>
+                <p class="humid">Humidity:25</p>
+                </ul>
         </div>
         <div class="block">
-            <li>
+            <ul>
+            <li></li>
+            <li></li>
             <p class="temp">Temp:25</p>
             <p class="wind">Wind:25</p>
             <p class="humid">Humidity:25</p>
-            </li>
+            </ul>
         </div>
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
+        <div class="block">
+            <ul>
+                <li></li>
+                <li></li>
+                <p class="temp">Temp:25</p>
+                <p class="wind">Wind:25</p>
+                <p class="humid">Humidity:25</p>
+                </ul>
+        </div>
+        <div class="block">
+            <ul>
+                <li></li>
+                <li></li>
+                <p class="temp">Temp:25</p>
+                <p class="wind">Wind:25</p>
+                <p class="humid">Humidity:25</p>
+                </ul>
+        </div>
+        <div class="block">
+            <ul>
+                <li></li>
+                <li></li>
+                <p class="temp">Temp:25</p>
+                <p class="wind">Wind:25</p>
+                <p class="humid">Humidity:25</p>
+                </ul>
+        </div>
     </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
