--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <div class="fiveDayForecast">
         <div class="block">
             <ul>
-                <li></li>
-                <li></li>
+                <li class="dayOne"></li>
+                <img class="iconOne">
                 <p class="temp">Temp:25</p>
                 <p class="wind">Wind:25</p>
                 <p class="humid">Humidity:25</p>
@@ -40,8 +40,8 @@
         </div>
         <div class="block">
             <ul>
-            <li></li>
-            <li></li>
+            <li class="dayTwo"></li>
+            <li class="iconTwo"></li>
             <p class="temp">Temp:25</p>
             <p class="wind">Wind:25</p>
             <p class="humid">Humidity:25</p>
@@ -49,8 +49,8 @@
         </div>
         <div class="block">
             <ul>
-                <li></li>
-                <li></li>
+                <li class="dayThree"></li>
+                <li class="iconThree"></li>
                 <p class="temp">Temp:25</p>
                 <p class="wind">Wind:25</p>
                 <p class="humid">Humidity:25</p>
@@ -58,8 +58,8 @@
         </div>
         <div class="block">
             <ul>
-                <li></li>
-                <li></li>
+                <li class="dayFour"></li>
+                <li class="iconFour"></li>
                 <p class="temp">Temp:25</p>
                 <p class="wind">Wind:25</p>
                 <p class="humid">Humidity:25</p>
@@ -67,8 +67,8 @@
         </div>
         <div class="block">
             <ul>
-                <li></li>
-                <li></li>
+                <li class="dayFive"></li>
+                <li class="iconFive"></li>
                 <p class="temp">Temp:25</p>
                 <p class="wind">Wind:25</p>
                 <p class="humid">Humidity:25</p>
