Icons for the five day forecast

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="block">
             <ul>
             <li class="dayTwo"></li>
-            <li class="iconTwo"></li>
+            <img class="iconTwo">
             <p class="temp">Temp:25</p>
             <p class="wind">Wind:25</p>
             <p class="humid">Humidity:25</p>
@@ -50,7 +50,7 @@
         <div class="block">
             <ul>
                 <li class="dayThree"></li>
-                <li class="iconThree"></li>
+                <img class="iconThree">
                 <p class="temp">Temp:25</p>
                 <p class="wind">Wind:25</p>
                 <p class="humid">Humidity:25</p>
@@ -59,7 +59,7 @@
         <div class="block">
             <ul>
                 <li class="dayFour"></li>
-                <li class="iconFour"></li>
+                <img class="iconFour">
                 <p class="temp">Temp:25</p>
                 <p class="wind">Wind:25</p>
                 <p class="humid">Humidity:25</p>
@@ -68,7 +68,7 @@
         <div class="block">
             <ul>
                 <li class="dayFive"></li>
-                <li class="iconFive"></li>
+                <img class="iconFive">
                 <p class="temp">Temp:25</p>
                 <p class="wind">Wind:25</p>
                 <p class="humid">Humidity:25</p>
