Adding real time temperature values for the five day forecast

--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
             <p class="uv">UV Index:</p>
         </div>
     </div>
+    <h1 class="forecastTitle">Five Day Forecast:</h1>
     <div class="fiveDayForecast">
         <div class="block">
             <ul>
                 <li class="dayOne"></li>
                 <img class="iconOne">
-                <p class="temp">Temp:25</p>
-                <p class="wind">Wind:25</p>
+                <p class="foreTempOne">Temp:25</p>
+                <p class="foreWindOne">Wind:25</p>
                 <p class="humid">Humidity:25</p>
                 </ul>
         </div>
@@ -42,8 +43,8 @@
             <ul>
             <li class="dayTwo"></li>
             <img class="iconTwo">
-            <p class="temp">Temp:25</p>
-            <p class="wind">Wind:25</p>
+            <p class="foreTempTwo">Temp:25</p>
+            <p class="foreWindTwo">Wind:25</p>
             <p class="humid">Humidity:25</p>
             </ul>
         </div>
@@ -51,8 +52,8 @@
             <ul>
                 <li class="dayThree"></li>
                 <img class="iconThree">
-                <p class="temp">Temp:25</p>
-                <p class="wind">Wind:25</p>
+                <p class="foreTempThree">Temp:25</p>
+                <p class="foreWindThree">Wind:25</p>
                 <p class="humid">Humidity:25</p>
                 </ul>
         </div>
@@ -60,8 +61,8 @@
             <ul>
                 <li class="dayFour"></li>
                 <img class="iconFour">
-                <p class="temp">Temp:25</p>
-                <p class="wind">Wind:25</p>
+                <p class="foreTempFour">Temp:25</p>
+                <p class="foreWindFour">Wind:25</p>
                 <p class="humid">Humidity:25</p>
                 </ul>
         </div>
@@ -69,8 +70,8 @@
             <ul>
                 <li class="dayFive"></li>
                 <img class="iconFive">
-                <p class="temp">Temp:25</p>
-                <p class="wind">Wind:25</p>
+                <p class="foreTempFive">Temp:25</p>
+                <p class="foreWindFive">Wind:25</p>
                 <p class="humid">Humidity:25</p>
                 </ul>
         </div>
