Creating wind and humid variables

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img class="iconOne">
                 <p class="foreTempOne">Temp:25</p>
                 <p class="foreWindOne">Wind:25</p>
-                <p class="humid">Humidity:25</p>
+                <p class="humidOne">Humidity:25</p>
                 </ul>
         </div>
         <div class="block">
@@ -45,7 +45,7 @@
             <img class="iconTwo">
             <p class="foreTempTwo">Temp:25</p>
             <p class="foreWindTwo">Wind:25</p>
-            <p class="humid">Humidity:25</p>
+            <p class="humidTwo">Humidity:25</p>
             </ul>
         </div>
         <div class="block">
@@ -54,7 +54,7 @@
                 <img class="iconThree">
                 <p class="foreTempThree">Temp:25</p>
                 <p class="foreWindThree">Wind:25</p>
-                <p class="humid">Humidity:25</p>
+                <p class="humidThree">Humidity:25</p>
                 </ul>
         </div>
         <div class="block">
@@ -63,7 +63,7 @@
                 <img class="iconFour">
                 <p class="foreTempFour">Temp:25</p>
                 <p class="foreWindFour">Wind:25</p>
-                <p class="humid">Humidity:25</p>
+                <p class="humidFour">Humidity:25</p>
                 </ul>
         </div>
         <div class="block">
@@ -72,7 +72,7 @@
                 <img class="iconFive">
                 <p class="foreTempFive">Temp:25</p>
                 <p class="foreWindFive">Wind:25</p>
-                <p class="humid">Humidity:25</p>
+                <p class="humidFive">Humidity:25</p>
                 </ul>
         </div>
     </div>
