Working on search button features

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="displayWeather">
     <form class="searchBar">
         <h1>Search For a City:</h1>
-        <input type="text" name="search" id="search">
-
-        <button>Search</button>
+        <input type="text" name="search" id="search" class="search" value="Joshua">
+        <!-- <div class="btnCarrier"></div> -->
+        <button class="submitBtn">Search</button>
     </form>
     <div class="dailyWeather">
         <div class="dailyWeatherHeader">
