Working on searching city through search history function

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <div class="displayWeather">
     <form class="searchBar">
         <h1>Search For a City:</h1>
-        <input type="text" name="search" id="search" class="search" value="Joshua">
+        <input type="text" name="search" id="search" class="search" value="Orbit">
         <!-- <div class="btnCarrier"></div> -->
         <button class="submitBtn">Search</button>
+        <div class="newBtn"></div>
     </form>
+    <!-- <div class="newBtn"></div> -->
     <div class="dailyWeather">
         <div class="dailyWeatherHeader">
         <h1 class="cityName"></h1>
