Getting rid of placeholder value, using user input for value instead

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="displayWeather">
     <form class="searchBar">
         <h1>Search For a City:</h1>
-        <input type="text" name="search" id="search" class="search" value="Orbit">
+        <input type="text" name="search" id="search" class="search" >
         <!-- <div class="btnCarrier"></div> -->
         <button class="submitBtn">Search</button>
         <div class="newBtn"></div>
